--- a/templates/certificate_residence.html
+++ b/templates/certificate_residence.html
@@ -170,7 +170,7 @@ button{
         نشهد نحن لجنة قرية مديسيسة بأن المذكور أعلاه من سكان قرية مديسيسة،
         ومقيم بها إقامة دائمة ومعروف لدى أهالي القرية.
         <br>
-        وقد حررت هذه الشهادة بناءً على طلبه، لتقديمها للجهة التي يطلبها،
+        وقد حررت هذه الشهادة بناءً على طلبه، لتقديمها للجهة التي تطلبها،
         دون أدنى مسؤولية على لجنة القرية.
         <br>
         وتفضلوا بقبول فائق الاحترام …
