--- a/templates/certificate_school.html
+++ b/templates/certificate_school.html
@@ -182,7 +182,7 @@ button{
         <div class="signature">
             مدير المدرسة
             <div class="line"></div>
-            الاستاذة
+             الاستاذة : لميـــاء فضل الله
         </div>
     </div>
 </div>
