--- a/templates/index.html
+++ b/templates/index.html
@@ -333,10 +333,10 @@ button{
 <!-- ===== السلايدر ===== -->
 <div class="slider" id="slider">
     <div class="slide active">
-        <img src="{{ url_for('static', filename='hi/1.png') }}">
+        <img src="{{ url_for('static', filename='hi/001.png') }}">
         <div class="slide-text">
-            <h2>سلمى معاوية عثمان الحسن</h2>
-            <p>تضع مدرسة مديسيسة في قائمة الشرف</p>
+            <h2>"نادي جميل، لحظات لا تُنسى!"</h2>
+            <p>"هنا يبدأ التفوق والتميز!"</p>
         </div>
     </div>
     <div class="slide">
@@ -513,6 +513,7 @@ if(bannerSection && bannerVideo){
 
 </body>
 </html>
+
 
 
 
