--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@ nav a:hover,.admin-btn:hover{
 /* ================= الأخبار ================= */
 .news-bar{
     width:100%;
-    background:#800000;
+    background:#ffffff;
     overflow:hidden;
     white-space:nowrap;
     padding:10px 0;
@@ -513,6 +513,7 @@ if(bannerSection && bannerVideo){
 
 </body>
 </html>
+
 
 
 
