--- a/templates/certificate_residence.html
+++ b/templates/certificate_residence.html
@@ -164,7 +164,7 @@ button{
     </div>
 
     <div class="name">{{ user.full_name }}</div>
-    <div class="national">رقم وطني : {{ user.national_id }}</div>
+    <div class="national">رقم وطني /جواز سفر : {{ user.national_id }}</div>
 
     <div class="content">
         نشهد نحن لجنة قرية مديسيسة بأن المذكور أعلاه من سكان قرية مديسيسة،
