--- a/templates/certificate_school.html
+++ b/templates/certificate_school.html
@@ -165,7 +165,7 @@ button{
     </div>
 
     <div class="name">{{ user.full_name }}</div>
-    <div class="national">رقم وطني : {{ user.national_id }}</div>
+    <div class="national">رقم وطني / جواز سفر  : {{ user.national_id }}</div>
 
     <div class="content">
         تشهد مدرسة مديسيسة بأن المذكور أعلاه من طلاب مدرسة مديسيسة،
